# go-it_WEB

./: README.md
HW_1/: HW_1.1.py  HW_1.2.py
HW_10/HW_10.1_MongoDB/: config.ini  main.py
HW_10/HW_10.2_Redis/: main.py
HW_11/: app.py  models.py  mynotes.db
HW_11/templates/: detail.html  index.html  note.html  record.html  update.html
HW_13/finance/: db.sqlite3
HW_13/finance/fin_app/: admin.py  models.py  urls.py  views.py
HW_13/finance/fin_app/migrations/: 0001_initial.py  0002_rename_name_costs_summa.py  0003_rename_category_costs_categories_and_more.py  0004_rename_income_date_costs_cost_date_and_more.py  0005_alter_costs_summa_alter_income_summa.py  0006_alter_income_income_date.py  0007_alter_costs_cost_date_alter_income_income_date.py
HW_13/finance/fin_app/templates/fin_app/: category.html  cost.html  detail_cost.html  detail_income.html  filter.html  filter_results.html  income.html  index.html
HW_13/finance/finance/: settings.py  urls.py
HW_14/: main.py  models.py  sqlalchemy_example.db
HW_2/: HW_2.py  HW_2_UML.drawio
HW_3/Docker/: Dockerfile
HW_3/Poetry/: Notes.py  pyproject.toml
HW_4/: main.py
HW_5/: main.py
HW_6/: main.py
HW_7/: Client.py  Server.py
HW_8/: HW_8.sql  create_db.py  education.db  pyproject.toml
HW_9/: alembic.ini  main.py  models.py  mydb.db
HW_9/alembic/versions/: 2310e9620fd8_init.py
