[tool.poetry]
name = "hw-3"
version = "0.1.0"
description = "Helper"
authors = ["Pavlo Kulinskyi <pavel.kulinskyi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hw_3"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
